Added script for download fresh users.xml

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -32,6 +32,7 @@ eggs =
     PasteScript
     PasteDeploy
     Flask-Mako
+    lxml
 
 interpreter = python-console
 
@@ -89,6 +90,7 @@ recipe = pbp.recipe.noserunner
 eggs =
     presence_analyzer
     Flask-Mako
+    lxml
 
 defaults = -v
 
@@ -108,6 +110,7 @@ eggs =
     pylint
     presence_analyzer
     Flask-Mako
+    lxml
 
 scripts = pylint
 entry-points = pylint=pylint.lint:Run
